fix(notification): notification rendered as visible with `open="false"` (#316)

--- a/packages/bee-q/src/components/notification/scss/bq-notification.scss
+++ b/packages/bee-q/src/components/notification/scss/bq-notification.scss
@@ -5,11 +5,11 @@
 @import './bq-notification.variables';
 
 :host {
-  @apply hidden;
+  @apply block;
 }
 
-:host([is-open]) {
-  @apply block;
+:host(.is-hidden) {
+  @apply hidden;
 }
 
 .bq-notification {
